; ModuleID = '/home/carl/AnghaBench/php-src/ext/dba/libcdb/extr_cdb_make.c_cdb_posplus.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/dba/libcdb/extr_cdb_make.c_cdb_posplus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdb_make = type { i64 }

@ENOMEM = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cdb_make*, i64)* @cdb_posplus to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cdb_posplus(%struct.cdb_make* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.cdb_make*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.cdb_make* %0, %struct.cdb_make** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.cdb_make*, %struct.cdb_make** %4, align 8
  %8 = getelementptr inbounds %struct.cdb_make, %struct.cdb_make* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* %5, align 8
  %11 = add nsw i64 %9, %10
  store i64 %11, i64* %6, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load i64, i64* %5, align 8
  %14 = icmp slt i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32, i32* @ENOMEM, align 4
  store i32 %16, i32* @errno, align 4
  store i32 -1, i32* %3, align 4
  br label %21

17:                                               ; preds = %2
  %18 = load i64, i64* %6, align 8
  %19 = load %struct.cdb_make*, %struct.cdb_make** %4, align 8
  %20 = getelementptr inbounds %struct.cdb_make, %struct.cdb_make* %19, i32 0, i32 0
  store i64 %18, i64* %20, align 8
  store i32 0, i32* %3, align 4
  br label %21

21:                                               ; preds = %17, %15
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
